[package]
name = "haily-types"
version.workspace = true
edition.workspace = true
description = "Shared message/DTO types (Request, ResponseChunk, Notification) — leaf crate, no logic"

[dependencies]
serde = { workspace = true }
uuid  = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
serde_json = { workspace = true }
