[package]
name = "haily-types"
version.workspace = true
edition.workspace = true
description = "Shared message/DTO types (Request, ResponseChunk, Notification) — leaf crate, no logic"

[dependencies]
serde = { workspace = true }
# Wire-format value used ONLY for the mobile protocol's forward-compat "Unknown" decode path
# (mobile.rs) — buffering an unrecognized frame body as JSON so an old client tolerates a new
# server variant instead of hard-failing (see CLAUDE.md Decision C3). Already a transitive dep
# of every crate that consumes this one; promoting it from dev-only to a real dependency does
# not add a new library to the workspace's dependency graph.
serde_json = { workspace = true }
uuid  = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = "0.1"
# Only used for `ProactiveCard::created_at`'s RFC3339 stamp (phase 08) — already a
# workspace dep used throughout the other crates.
chrono = { workspace = true }

[dev-dependencies]
